remove hacky javafx integration steps
Upstream fixed the bug (FAForever/downlords-faf-client#2813) which
left out JavaFX from the ICE adapter classpath. This pile of hacks is no
longer needed, and we no longer need to fear Gluon 404ing their
downloads for no apparent reason.